# ironplc-benchmarks

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: benchmark.yml  ci.yml
benchmarks/: build_libs.sh  ironplc_compat.py  ironplc_compat_lib.st  ironplc_perf.py  matiec_compile.sh  matiec_stubs.c  run_all.sh  run_benchmark.sh  run_e2e.py
benchmarks/matiec_harness/: Cargo.toml
benchmarks/minimal_repros/: 01_cross_function_call.st  01b_string_func_in_function.st  01c_global_var_access.st  04_shl_with_function_arg.st  05_scientific_notation.st  06_type_struct.st  07_array_indexing.st  09_ref_to.st  10_ltime.st  11_unused_functions.st  12_terminal_error.st  (+38 more)
benchmarks/rusty_harness/: Cargo.toml
benchmarks/rusty_harness/src/: main.rs
compat_out/: test_ACOSH.st  test_ACOTH.st  test_AGDF.st  test_AIN.st  test_AOUT.st  test_AOUT1.st  test_ASINH.st  test_ATANH.st  test_BAND_B.st  test_BCDC_TO_INT.st  test_BETA.st  test_BFT_TO_MS.st  test_BINOM.st  test_BIN_TO_BYTE.st  test_BIN_TO_DWORD.st  test_BIT_COUNT.st  test_BIT_LOAD_B.st  test_BIT_LOAD_B2.st  test_BIT_LOAD_DW.st  test_BIT_LOAD_DW2.st  test_BIT_LOAD_W.st  test_BIT_LOAD_W2.st  test_BIT_OF_DWORD.st  test_BIT_TOGGLE_B.st  test_BIT_TOGGLE_DW.st  test_BIT_TOGGLE_W.st  test_BYTE_OF_BIT.st  test_BYTE_OF_DWORD.st  test_BYTE_TO_GRAY.st  test_BYTE_TO_RANGE.st  test_BYTE_TO_STRB.st  test_BYTE_TO_STRH.st  test_CAPITALIZE.st  test_CAUCHY.st  test_CAUCHYCD.st  test_CEIL.st  test_CEIL2.st  test_CHARCODE.st  test_CHARNAME.st  test_CHECK_PARITY.st  (+254 more)
(+16 files in other folders)
