[package]
name = "rusty-harness"
version = "0.1.0"
edition = "2021"
description = "Benchmark harness for RuSTy-compiled IEC 61131-3 shared libraries"

[dependencies]
libloading = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
